<resources>
    <string name="app_name">RecipeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="recipe_logo">Recipe logo</string>
    <string name="briefly">BRIEFLY</string>
    <string name="let_s_cook">LET\'S COOK</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="calculate">Calculate</string>
    <string name="servings">Servings</string>
    <string name="calories">Calories</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_account_yet_sing_up">Don\'t have account yet? Sing up</string>
    <string name="already_have_account_sign_in">Already have account? Sign in</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="no_favorites_found">No favorites found</string>
</resources>