<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.tabs.IngredientsTabFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cr_servings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/group_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/ic_group"
                app:layout_constraintBottom_toTopOf="@id/calculate_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/servings_txt"
                style="@style/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:text="@string/servings"
                app:layout_constraintBottom_toBottomOf="@+id/group_img"
                app:layout_constraintStart_toEndOf="@id/group_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/servings_amount"
                style="@style/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/servings_txt"
                app:layout_constraintStart_toEndOf="@id/servings_txt"
                app:layout_constraintTop_toTopOf="@id/servings_txt"
                tools:text="5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculate_btn"
                style="@style/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_calculate"
                android:padding="15dp"
                android:text="@string/calculate"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/group_img" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/cr_servings">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/ic_calories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/calories_txt"
                style="@style/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:text="@string/calories"
                app:layout_constraintBottom_toBottomOf="@+id/img_cal"
                app:layout_constraintStart_toEndOf="@id/img_cal"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/calories_amount"
                style="@style/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/calories_txt"
                app:layout_constraintStart_toEndOf="@id/calories_txt"
                app:layout_constraintTop_toTopOf="@id/calories_txt"
                tools:text="189" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/img_cal"
                tools:listitem="@layout/ingredient_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>